<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nitin.assignment4.TAInfo"
    android:background="@drawable/usc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textColor="#ffcc00"
        android:textIsSelectable="false"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/pradipta"
        android:id="@+id/pradipta"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/TaPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TaName"
        android:id="@+id/TaName"
        android:textColor="#ffcc00"
        android:layout_alignTop="@+id/pradipta"
        android:layout_toEndOf="@+id/pradipta"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaData"
        android:id="@+id/TaData"
        android:layout_toEndOf="@+id/pradipta"
        android:layout_below="@+id/TaName"
        android:layout_marginTop="2dp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TaCont"
        android:id="@+id/TaCont"
        android:textColor="#ffcc00"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaData1"
        android:id="@+id/TaData1"
        android:layout_below="@+id/TaCont"
        android:layout_alignStart="@+id/TaCont"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/TaWeb"
        android:textColor="#ffcc00"
        android:id="@+id/TaWeb"
        android:textStyle="bold"
        android:layout_below="@+id/TaData1"
        android:layout_alignStart="@+id/TaData1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TaWeb1"
        android:id="@+id/TaWeb1"
        android:layout_below="@+id/TaWeb"
        android:layout_alignStart="@+id/TaWeb"
        android:textColorLink="#2962ff"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/usclogo"
        android:id="@+id/logo"
        android:contentDescription="@string/usclogop3"
        android:layout_below="@+id/TaWeb1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

</RelativeLayout>
