<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nitin.assignment4.InstructorInfo"
    android:background="@drawable/usc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textIsSelectable="false"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#ffcc00"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bhaskar"
        android:id="@+id/bhaskar"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/InstPic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InstName"
        android:id="@+id/InstName"
        android:layout_alignTop="@+id/bhaskar"
        android:layout_toEndOf="@+id/bhaskar"
        android:textStyle="bold"
        android:textColor="#ffcc00"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InstData"
        android:id="@+id/InstData"
        android:layout_toEndOf="@+id/bhaskar"
        android:layout_below="@+id/InstName"
        android:layout_marginTop="2dp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InstCont"
        android:id="@+id/InstCont"
        android:layout_below="@+id/bhaskar"
        android:layout_alignParentStart="true"
        android:layout_marginStart="37dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#ffcc00"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InstData1"
        android:id="@+id/InstData1"
        android:layout_below="@+id/InstCont"
        android:layout_alignStart="@+id/InstCont"
        android:layout_marginTop="2dp"
        android:textColor="#ffffff"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/InstWeb"
        android:id="@+id/InstWeb"
        android:layout_below="@+id/InstData1"
        android:layout_alignStart="@+id/InstData1"
        android:textStyle="bold"
        android:textColor="#ffcc00"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/InstWeb1"
        android:id="@+id/InstWeb1"
        android:layout_below="@+id/InstWeb"
        android:layout_alignStart="@+id/InstWeb"
        android:textIsSelectable="false"
        android:layout_marginTop="2dp"
        android:textColorLink="#2962ff"/>

    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/usclogo"
        android:id="@+id/logo"
        android:contentDescription="@string/usclogop3"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/InstWeb1"
        android:layout_marginTop="20dp"/>


</RelativeLayout>
