<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.nitin.assignment4.PageOne"
    android:background="@drawable/usc">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textIsSelectable="false"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#ffcc00"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/username"
        android:width="250dp"
        android:visibility="visible"
        android:hint="@string/usernmHint"
        android:textSize="20sp"
        android:inputType="text|textCapCharacters"
        android:imeOptions="actionDone"
        android:textColor="#ffffff"
        android:layout_marginTop="109dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:capitalize="characters"
        android:singleLine="true" />

    <Button
        android:background="@drawable/red_button"
        style="@style/button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitButton"
        android:id="@+id/submit"
        android:ellipsize="marquee"
        android:textStyle="bold"
        android:typeface="normal"
        android:clickable="true"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"/>

    <ImageView
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:src="@drawable/usclogo"
    android:id="@+id/logo"
    android:contentDescription="@string/usclogop3"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_below="@id/submit"
    android:layout_marginTop="248dp"/>

</RelativeLayout>